--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -21,7 +21,8 @@
       <div class="nav-links">
         <!-- <a href="/vpn/pricing">Pricing</a>
         <a href="/vpn/instructions">Instructions</a> -->
-        <a href="/bot/bug/create">Помощь</a>
+        <a href="/bot/bug/create">Техподдержка</a>
+        <a href="/vpn/docs/src.html">Разработчикам</a>
         <!-- <a href="/vpn/contact">Contact</a> -->
         <a href="/bot/auth/login" class="cta-button">Войти</a>
       </div>
