--- a/server/templates/500.html
+++ b/server/templates/500.html
@@ -4,7 +4,7 @@
   <base href="." />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 - Page Not Found - DanVPN</title>
+  <title>500 - Internal Error - DanVPN</title>
   <link rel="stylesheet" href="/static/css/error.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -18,13 +18,12 @@
       <path fill="currentColor" d="M50 25 L70 40 L65 60 L50 70 L35 60 L30 40 Z" />
     </svg>
 
-    <div class="error-code">404</div>
-    <h1 class="error-title">Page Not Found</h1>
+    <div class="error-code">500</div>
+    <h1 class="error-title">Internal Error</h1>
     <p class="error-message">
-      The page you're looking for seems to have flown away. Don't worry though,
-      our falcon is already searching for it! In the meantime, why not head back home?
+      Приносим свои извинения, похоже что-то пошло не так. Попробуйте снова позже или обратитесь в техподдержку.
     </p>
-    <a href="/vpn" class="home-button">Return Home</a>
+    <a href="/vpn" class="home-button">На главную</a>
   </div>
 
 </body>
