--- a/server/templates/pricing.html
+++ b/server/templates/pricing.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FalconVPN - Pricing</title>
-  <link rel="stylesheet" href="../static/css/styles.css">
-  <link rel="stylesheet" href="../static/css/navbar.css">
+  <link rel="stylesheet" href="/static/css/styles.css">
+  <link rel="stylesheet" href="/static/css/navbar.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
@@ -15,7 +15,7 @@
   <nav class="navbar">
     <div class="navbar-content">
       <a href="/vpn" class="logo">
-        <img src="../static/Logo2_no_back_2.png" alt="DanVPN logo showing stylized falcon" width="60" height="60">
+        <img src="/static/Logo2_no_back_2.png" alt="DanVPN logo showing stylized falcon" width="60" height="60">
         DanVPN
       </a>
       <div class="nav-links">
@@ -92,8 +92,8 @@
   </div>
 
 
-  <script src="../static/js/pricing.js"></script>
-  <script src="../static/js/navbar.js"></script>
+  <script src="/static/js/pricing.js"></script>
+  <script src="/static/js/navbar.js"></script>
 
 </body>
 
