--- a/server/templates/privacy.html
+++ b/server/templates/privacy.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DanVPN - Простой и быстрый VPN-сервис</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
-    <link rel="stylesheet" href="../static/css/navbar.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/navbar.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
@@ -15,15 +15,14 @@
     <nav class="navbar">
         <div class="navbar-content">
             <a href="/vpn" class="logo">
-                <img src="../static/Logo2_no_back_2.png" alt="DanVPN logo showing stylized falcon" width="60"
+                <img src="/static/Logo2_no_back_2.png" alt="DanVPN logo showing stylized falcon" width="60"
                     height="60">
                 DanVPN
             </a>
             <div class="nav-links">
-                <!-- <a href="/vpn/pricing">Pricing</a>
-            <a href="/vpn/instructions">Instructions</a> -->
+                <a href="/vpn/pricing">Тарифы</a>
+                <a href="/vpn/instructions">Инструкции</a>
                 <a href="/bot/bug/create">Техподдержка</a>
-                <!-- <a href="/vpn/contact">Contact</a> -->
                 <a href="/vpn/profile" class="cta-button">Войти</a>
             </div>
         </div>
@@ -85,7 +84,7 @@
             accessed by other users of the DanVPN Bot via the Platform or on the internet, in which case it
             will not be covered or protected by this Policy.</p>
 
-        <h4><a class="anchor" name="4-collection-of-personal-data" href="/vpn/privacy#4-collection-of-personal-data"><i
+        <h4><a class="anchor" name="4-collection-of-personal-data" href="/vpn/docs/privacy#4-collection-of-personal-data"><i
                     class="anchor-icon"></i></a>4. Collection of Personal Data</h4>
         <p>4.1. The ways in which the Platform natively allows the DanVPN Bot to access certain limited
             information
@@ -93,7 +92,7 @@
                 class="text-link">Telegram
                 Privacy Policy</a> and <a href="https://telegram.org/tos/mini-apps#4-privacy" class="text-link">Mini App
                 Terms</a>.</p>
-        <p>4.2. Without limiting <a href="/vpn/privacy#4-collection-of-personal-data" class="text-link">section
+        <p>4.2. Without limiting <a href="/vpn/docs/privacy#4-collection-of-personal-data" class="text-link">section
                 4.1.</a>,
             the DanVPN Bot has the ability to receive additional data from you if you send it messages, upload
             files to it, or choose to share personal information such as your contact or phone number.</p>
@@ -111,7 +110,7 @@
         <p>5.2. The Developer does not monetize or otherwise utilize user data for applications outside the scope of
             the DanVPN Bot, unless otherwise clearly stated by the Developer and explicitly agreed to by the
             User.</p>
-        <p>5.3. Without limiting <a href="/vpn/privacy#6-data-protection" class="text-link">section 6.2.</a>, private
+        <p>5.3. Without limiting <a href="/vpn/docs/privacy#6-data-protection" class="text-link">section 6.2.</a>, private
             user information will not be transferred or made accessible
             to any third party, except as stipulated by this Policy and agreed to by the User.</p>
         <p>5.4. In any event, the Developer will only collect or otherwise aggregate user data in compliance with
@@ -175,7 +174,7 @@
                     class="anchor-icon"></i></a>8. Changes to this Privacy Policy</h4>
         <p>While we do not anticipate frequent changes, we will review and may update this Privacy Policy from time to
             time. Any changes to this Privacy Policy will become effective when we post the revised Privacy
-            Policy on this page <a href="http://assa.ddns.net/vpn/privacy" class="text-link">DanVPN. Privacy Policy</a>.
+            Policy on this page <a href="/vpn/docs/privacy" class="text-link">DanVPN. Privacy Policy</a>.
             Please
             check our website frequently to see any updates or changes to this Privacy Policy, a summary of which we
             will set out below.</p>
@@ -194,8 +193,8 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="/vpn/about">О нас</a>
-                <a href="/vpn/docs/src.html">Разработчикам</a>
-                <a href="/vpn/privacy">Privacy Policy</a>
+                <a href="/vpn/docs/code/src.html">Разработчикам</a>
+                <a href="/vpn/docs/privacy">Privacy Policy</a>
                 <a href="https://github.com/daniil-mazurov/vpn_dan_bot">GitHub</a>
             </div>
             <div class="footer-bottom">
@@ -204,7 +203,7 @@
         </div>
     </footer>
 
-    <script src="../static/js/navbar.js"></script>
+    <script src="/static/js/navbar.js"></script>
 </body>
 
 </html>
